[package]
name = "g_lue"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop-backend"]
desktop-backend = ["sdl2","glow/sdl2"]
browser-backend = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.1"
serde_json = "1.0.55"
nalgebra = "0.21.1"
ec_composer = { path="./aux_crates/ec_composer" }
serde = { version = "1.0", features = ["derive"] }

# Platform specific dependencies here 
sdl2 = { version = "0.33.0", optional = true }
glutin = { version = "0.24", optional = true }
glow = { version = "0.5.0" , optional = true, default-features = false }
wasm-bindgen = { version = "0.2.67", optional = true } 
web-sys = { version = "0.3.44" ,  features=["console"], optional = true } 






