[package]
name = "fluffl"
version = "0.0.2"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"
description = "A cross-platform multimedia layer that exposes opengl,sockets,and audio utilities for desktop and broswer"
readme = "README.md"
repository="https://github.com/K-C-DaCosta/fluffl"
keywords=["multimedia","graphics","audio","wasm"]
categories=["graphics","gui","game-development","multimedia","wasm"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glow = { version = "0.6.1"  , default-features = false }
bincode = "1.3.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }

# ******************************************
# Optional deps
# ******************************************

# desktop deps 

sdl2 = { version = "0.33.0" , default-features=false, optional = true }
tungstenite = { version = "0.11.1", optional = true} 
native-tls = {version = "0.2.4",  optional = true}

# web deps 

wasm-bindgen = { version = "0.2.67", optional = true } 
wasm-bindgen-futures = { version = "0.4.17", optional = true }
js-sys = {version = "0.3.44" , optional = true}
futures = {version = "0.3.5" , default-features=false ,optional = true}
console_error_panic_hook = {version = "0.1.6", optional = true}
wee_alloc = { version = "0.4.2", optional = true }
http = {version = "0.2.1" , optional = true}

# extras deps

arrayvec = {version = "0.5.2", optional = true } 
lewton = { version = "0.10.1", optional = true } 
puremp3 = { version = "0.1.0", optional = true }
hiero_pack = { version="0.1.0",default-features= false,optional=true}

[dependencies.web-sys]
version = "0.3.44" 
optional = true  
features=[
    'console',
    'Document',
    'Element',
    'Node',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlButtonElement',
    'HtmlBodyElement',
    'HtmlCollection',
    'AddEventListenerOptions',
    'EventTarget',
    'MouseEvent',
    'WheelEvent', 
    'KeyboardEvent',
    'CssStyleDeclaration',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Blob',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'WebSocket',
    'BinaryType',
    'MessageEvent',
    'CloseEvent',
    'TouchEvent',
    'TouchList',
    'Touch',
]


[features]
default=["web","extras"]

desktop = [
    "sdl2",
    "glow/sdl2",
    "futures/executor",
    "tungstenite",
    "native-tls",
    "http"
]

web = [
    "web-sys",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "glow/web-sys",
    "console_error_panic_hook",
    "wee_alloc",
]

extras = [ 
    'arrayvec',
    'lewton',
    'puremp3',
    'hiero_pack'
]
