[package]
name = "fluffl-macros"
version = "0.0.3"
edition = "2021"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
description = "A cross-platform multimedia layer that exposes opengl,sockets,and audio utilities for desktop and browser"
readme = "README.md"
repository = "https://github.com/K-C-DaCosta/fluffl"
keywords = ["multimedia", "graphics", "audio", "wasm"]
categories = ["graphics", "gui", "game-development", "multimedia", "wasm"]
license = "MIT OR Apache-2.0"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "1.0.91", features = ['full'] }
quote = "1.0.18"
