[package]
name = "fluffl"
version = "0.0.3"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"
description = "A cross-platform multimedia layer that exposes opengl,sockets,and audio utilities for desktop and browser"
readme = "README.md"
repository = "https://github.com/K-C-DaCosta/fluffl"
keywords = ["multimedia", "graphics", "audio", "wasm"]
categories = ["graphics", "gui", "game-development", "multimedia", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = ["glutin"]
extras = [ "lewton", "puremp3"]
sdl2 = ["be_sdl2", "glow/sdl2"]
glutin = ["be_glutin", "glow/glutin"]

[[example]]
name ="audio_ex1"
required-features = ["extras"]

[[example]]
name ="brick_demo"
required-features = ["extras"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hiero_pack = { version = "0.1.1", default-features = false }
bincode = "1.3.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
cfg-if = "1.0.0"
fluffl-macros = { version = "0.0.1", path = "../fluffl-macros" }

lewton = { version = "0.10.1", optional = true }
puremp3 = { version = "0.1.0", optional = true }
adhoc_audio = { version = "0.1.4", default-features = false }

#........................ 
#......browser deps...... 
#........................
[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = { version = "0.2.67" }
wasm-bindgen-futures = { version = "0.4.17" }
js-sys = { version = "0.3.44" }
futures = { version = "0.3.5", default-features = false }
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.2" }
glow = { version = "0.6.1", default-features = false, features = ["web-sys"] }
web-sys = { version = "0.3.44", features = [
    'console',
    'Document',
    'Element',
    'Node',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlButtonElement',
    'HtmlBodyElement',
    'HtmlCollection',
    'AddEventListenerOptions',
    'EventTarget',
    'MouseEvent',
    'WheelEvent',
    'KeyboardEvent',
    'CssStyleDeclaration',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Blob',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'WebSocket',
    'BinaryType',
    'MessageEvent',
    'CloseEvent',
    'TouchEvent',
    'TouchList',
    'Touch',
    'UiEvent',
    'DomRect',
    'Navigator',
    'Permissions',
    'Screen',
    'MediaQueryList',
    'Performance',
    'PerformanceTiming',
] }


# ............................... 
# .....desktop general deps...... 
# ...............................
[target.'cfg(not(all(target_family = "wasm", not(target_os = "wasi"))))'.dependencies]
be_sdl2 = { version = "0.33.0", package = "sdl2", default-features = false, optional = true }
be_glutin = { version = "0.28", package = "glutin", optional = true }
http = { version = "0.2.1",optional=true }
tungstenite = { version = "0.11.1",optional=true }
native-tls = { version = "0.2.4",optional=true }
tokio = { version = "1", features = ['rt-multi-thread'] }
glow = { version = "0.6.1", default-features = false, optional = false }
futures = { version = "0.3.5", default-features = false, features = [
    "executor",
] }

# ............................... 
# ..... desktop linux deps ...... 
# ...............................
[target.'cfg(target_os ="linux")'.dependencies]
alsa = "0.6.0"

# ............................... 
# .....desktop windows deps...... 
# ...............................
[target.'cfg(target_os ="windows")'.dependencies]
windows = { version = "0.42.0", features = [
    "Media_Audio",
    "Foundation",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Media_MediaProperties",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem"
] }
