[package]
name = "glue_core"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glow = { version = "0.5.0"  ,   default-features = false }
ec_composer = { path="../ec_composer" }
bincode = "1.3.1"
serde_json = "1.0.55"
serde = { version = "1.0", features = ["derive"] }
# *************
# Optional deps
# *************
sdl2 = { version = "0.33.0" , features=["mixer"], optional = true }
wasm-bindgen = { version = "0.2.67", optional = true } 
wasm-bindgen-futures = { version = "0.4.17", optional = true }
js-sys = {version = "0.3.44" , optional = true}
futures = {version = "0.3.5" , default-features=false ,optional = true}
console_error_panic_hook = {version = "0.1.6", optional = true}

[dependencies.web-sys]
version = "0.3.44" 
optional = true  
features=[
    'console',
    'Document',
    'Element',
    'Node',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlButtonElement',
    'HtmlBodyElement',
    'HtmlCollection',
    'AddEventListenerOptions',
    'EventTarget',
    'MouseEvent',
    'WheelEvent', 
    'KeyboardEvent',
    'CssStyleDeclaration',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Blob',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'AudioBuffer',
    'AudioBufferSourceNode',
]


[features]
default=["web-sys","web"]

desktop = [
    "sdl2",
    "glow/sdl2",
    "futures",
    "futures/executor"
]

web = [
    "web-sys",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "glow/web-sys",
    "console_error_panic_hook"
]












