[package]
name = "glue_desktop"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies.glue_core]
path = "../glue_core"
default-features = false
features=["desktop"]