[package]
name = "glue_web"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
futures = "0.3.5"
console_error_panic_hook = "0.1.6"

[dependencies.glue_core]
path = "../glue_core"
default-features = false
features= ["web"]