[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "1.0.91", features = ['full'] }
quote = "1.0.18"

# browser target 
[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = { version = "0.2.78" }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = { version = "0.4.28" }

# desktop targets 
[target.'cfg(not(all(target_family = "wasm", not(target_os = "wasi"))))'.dependencies]
tokio = { version = "1", features = ['full'] }
