[package]
name = "touch_test"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"
description = "A simple touch screen test"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=['web']

desktop = [
    "tokio",
    "fluffl/desktop",
    "fluffl/extras",
]

web = [ 
    "fluffl/extras",
    "fluffl/web",
    "console_error_panic_hook"
]

[dependencies]
tokio = { version = "0.3", features = ["full"], optional=true }
console_error_panic_hook = { version = "0.1.6" , optional=true } 
fluffl = {path = "../../../fluffl",default-features = false, optional=true}
