[package]
name = "fluffr_web"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[features]
default = ["web"]

web = [ 
    'console_error_panic_hook',
    'fluffl/web'
]

[dependencies]
console_error_panic_hook = { version = "0.1.6" , optional=true } 
fluffl = { path = "../../../fluffl" , default-features = false, optional=true}

